2003-02-08  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Fully document the emulate command.

2003-02-06  olicha  <olivier.chapuis@free.fr>

	* fvwm/borders.c (get_common_decorations):
	(border_get_border_background):

2003-02-05  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/builtins.c (CMD_Exec): Use STDIN_FILENO instead of a zero.

2003-02-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menuitem.h:
	* fvwm/menuitem.c (menuitem_get_size):
	* fvwm/menus.c (calculate_item_sizes):
	renamed "mips" to mipst

	* fvwm/menuitem.c (menuitem_get_item_size):
	* fvwm/menus.c (_calculate_item_sizes):
	backed out patch from 30-Jan-2003

2003-01-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menuitem.h:
	* fvwm/menuitem.c (menuitem_get_item_size):
	* fvwm/menus.c (_calculate_item_sizes):
	functions renamed due to global name space collision with IRIX 6.5

2003-01-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	added tests/hints/Makefile.am

2003-01-24  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Fixed next->previous in Prev command.

2003-01-20  Dan Espen  <dane@mk.telcordia.com>

	* sample.fvwmrc/DecorWin95:
	* sample.fvwmrc/DecorMwm: Remove bad mouse binding, that I meant to
	Replace a long time ago.

2003-01-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (new_layer):
	(collect_transients_recursive):
	(__restack_window):
	fixed Layer command

	* fvwm/events.c (HandleConfigureRequest):
	fixed placement of icons
	fixed size calculations of icons

2003-01-18  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/expand.c:
	fixed $[desk.name<n>] that was masked by $[desk.n],
	added $[desk.pagesx] and $[desk.pagesy]

2003-01-16  Dan Espen  <dane@mk.telcordia.com>

	* NEWS: Update news.  Spelling fixes 2.5.x news.
	* fvwm/builtins.c (CMD_Exec): Close stdin so the exec'd process knows
	its not interactive.

2003-01-12  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/functable.c:
	added a short description together with the commands
