@@ -1,3 +1,8 @@
+2003-02-09  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/fvwm.1.in (Note): Update %space/%tab description in menu.
+	Give the XorValue range.
+
 2003-02-08  Dan Espen  <dane@mk.telcordia.com>
 
 	* fvwm/fvwm.1.in: Fully document the emulate command.
